fixed horizontal scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: #385b7b;
   font-family: "Lexend", sans-serif;
+  overflow-x: hidden;
 }
 
 /* navbar */
